--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -8,9 +8,8 @@ body {
 main {
   flex: 1 0 auto;
 }
-
 #map {
-    height: 900px;
+    height: 700px;
     width: 100%;
     margin-top: 8px;
 }
@@ -29,13 +28,24 @@ main {
   background-color: rgb(82, 101, 77);
 }
 
+.logo {
+  display: inline-block;
+  height: 100%;
+}
+
+.logo>img {
+  position: absolute;
+  top: 60%;
+  height: 70%;
+  margin-left: 10px;
+  transform: translateY(-60%);
+}
+
 #hero-button {
   font-size: 1vw;
 }
 
-.container {
-  position: relative;
-}
+
 
 .btn-large {
   margin: 0;
@@ -87,6 +97,11 @@ margin-left: 10px;
 .aboutImg {
   margin-bottom: 40px;
   margin-right: 20px;
+}
+
+#local-weather {
+  background-image: url("../Assets/images/heroimage.jpeg");
+  background-size:cover
 }
 
 .page-footer {
