--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,34 @@ main {
 }
 #map {
     height: 700px;
-    width: 100%;
+    width: 80%;
     margin-top: 8px;
 }
+.myBox {
+  border: none;
+  padding: 2px;
+  font: 15px/20px sans-serif;
+  width: 400px;
+  height: 550px;
+  overflow: scroll;
+  }
+  
+  /* Scrollbar styles */
+  ::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  }
+  
+  ::-webkit-scrollbar-track {
+  border: 1px solid rgb(142, 173, 133);
+  border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+  background: rgb(142, 173, 133);  
+  border-radius: 10px;
+  }
+
 
 .git-link:hover {
     color: #2e7d32;
@@ -123,7 +148,7 @@ main {
 #map {
     height: 900px;
     width: 100%;
-    margin-top: 8px;
+    margin-top: 30px;
 }
 
 .git-link:hover {
