--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,15 @@ body {
 main {
   flex: 1 0 auto;
 }
+
 #map {
-    height: 700px;
-    width: 100%;
-    margin-top: 8px;
+  height: 700px;
+  width: 100%;
+  margin-top: 8px;
+}
+
+#map-wrapper {
+  margin-top: 95px;
 }
 
 .git-link:hover {
@@ -41,23 +46,25 @@ main {
   transform: translateY(-60%);
 }
 
-#hero-button {
-  font-size: 1vw;
+.hero {
+  background-image: url("../assets/images/heroimage_new.jpg");
+  background-repeat: no-repeat;
+  background-position: 75% 25%;
+  background-size: cover;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
+#hero-button {
+  font-size: 15px;
+}
 
 .btn-large {
   margin: 0;
   border-radius: 30px;
   width: 200px;
-}
-
-.buttons-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transform: translate(0px, -300px);
 }
 
 .modal-size {
@@ -84,6 +91,7 @@ main {
 
 .submit-btn {
   background-color: #4e342e;
+  margin-left: 20px;
 }
 
 .submit-btn:hover {
@@ -98,6 +106,7 @@ margin-left: 10px;
   margin-bottom: 40px;
   margin-right: 20px;
 }
+
 
 #local-weather {
   background-image: url("../assets/images/heroimage.jpeg");
